style.css
body {
    font-family: Roboto, sans-serif;
    background-color: #192f37;
}
.header {
    margin-left: 15%;
    margin-right: 18%;
    display: flex;
    justify-content: space-between;
    color: white;
    font-size: 20px;
    height: 300px;
}
.link {
    color: #e5e7eb;
    font-size: 18px;
}
.logo {
    font-size: 24px;
    color: #f9faf8;
}
.h1 {  /*main page, website is awesome section*/
    font-size: 48px;
    color: #f9faf8;
}
.text {
    font-size: 18px;
    color: #e5e7eb;
}
.cont {
    display: flex;
    align-content: center;
    justify-content: space-between;
    margin-left: 15%;
    margin-right: 15%;
    margin-bottom: 100px;
}
.bttn {
    width: 90px;
    height: 35px;
    background-color: #3882f6;
    border: #3882f6;
    border-radius: 2px;
    color: #f9faf8;
    font-weight: bold;
}
.cont2 {  /*4 images section */
    align-items: center;
    height: 500px;
    background-color: white;
}
.h2 {
    padding-top: 50px;
    display: flex;
    justify-content: center;
    font-size: 36px;
    font-weight: bold;
    color: #1f2937;
}
.randominfo {
   margin: 40px;
   display: flex;
   flex-direction: column;
   max-width: 200px;
   align-items: center;
   gap: 20px;
   justify-content: flex-start;
}
.randominfo-wrapper {
    margin-left: 20%;
    margin-right: 20%;
    display: flex;
    justify-content: center;
}
.quote {  /*quote section*/
    letter-spacing: 2px;
    display: flex;
    font-size: 36px;
    max-width: 700px;
    color: #1f2937;
    font-family: light italic;
}
.cont3 {
    background-color: #e5e7eb;
    height: 500px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.andrew {
    display: flex;
    font-weight: bold;
    align-items: flex-end;
}
.cto {    /*call to action section*/
    display: flex;
    justify-content: center;
    align-items: center;
    height: 300px;
    background-color: white;
}
.textbox {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 900px;
    height: 80px;
    background-color: #3882f6;
    color: white;
    border: #3882f6;
    border-radius: 8px;
    padding: 10px;
}
.bttn2 {
    color: white;
    border-color: white;
    border-width: 2px;
    border-radius: 3px;
    background-color: #3882f6;
    margin-left: 150px;
    width: 90px;
    height: 25px;
}
.text-wrapper {
    display: flex;
    flex-direction: column;
}
.ctoh1{
    display: flex;
    margin-top: 0px;
    margin-bottom: 0px;
    margin-right: 100px;
}
.footer { /*footer*/
    color: #ffffff;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 60px;
}

